--- a/charts/sts-silicom-0.0.1/values.yaml
+++ b/charts/sts-silicom-0.0.1/values.yaml
@@ -5,7 +5,7 @@ NodeSelectors:
 Images:
   Tsyncd: quay.io/silicom/tsyncd:2.1.0.0
   Ts2Phcs: quay.io/silicom/ts2phcs:1.0.0
-  Phcs2Sys: quay.io/silicom/phcs2sys:3.1.1
+  Phcs2Sys: quay.io/silicom/phc2sys:3.1.1
   GrpcTsyncd: quay.io/silicom/grpc-tsyncd:2.1.0.0
   StsPlugin: quay.io/silicom/sts-plugin:0.0.2
   Gpsd: quay.io/silicom/gpsd:3.23.1
